// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoDB indexing can create default indexes 1`] = `
Array [
  Object {
    "key": Object {
      "_id": 1,
    },
    "name": "_id_",
    "ns": "test.note",
    "v": 2,
  },
  Object {
    "key": Object {
      "text": 1,
    },
    "name": "text_1",
    "ns": "test.note",
    "v": 2,
  },
]
`;

exports[`MongoDB indexing can create indexes with options 1`] = `
Array [
  Object {
    "key": Object {
      "_id": 1,
    },
    "name": "_id_",
    "ns": "test.note",
    "v": 2,
  },
  Object {
    "key": Object {
      "meta": 1,
      "pages": 1,
    },
    "name": "compound_index",
    "ns": "test.note",
    "v": 2,
  },
]
`;
